# HDpainter

./: .gitignore  LICENSE  README.md  batch_data_process_work_list.md  dataset_loader.ipynb  evaluate_on_sys.ipynb  pyproject.toml
.claude/: settings.local.json
docs/: README.md  architecture.md  dataset.md  experiments.md  jieke_开发指导文档.md  training.md  vae.md  zhuofan.md
inference/: compare_data.py  evaluate_signal_quality.py  infer_hd.py  infer_utils.py  infer_visiualize.py  nucleus_segment.py  post_data_check.py  post_process.py  signal_process.py  summarize_evaluation_suite.py
model/: dataset.py  model.py  train.py
preprocess/: SVD_dataset_process.ipynb  SVD_process.ipynb  Systhesis_process.ipynb  batch_process_raw_data.py  data_pre.ipynb  dataset_process.ipynb  degrade_process.ipynb  preprocess.py  reference_visium_process.ipynb  stpainter_process.ipynb  utils.py  visual_sys_hd.py
scripts/: infer.py  preprocess.py  slurm_infer.sh  slurm_train_example.sh  slurm_train_ldm.sh  slurm_train_ldm_v4.sh  slurm_train_vae.sh  train_ldm.py  train_vae.py
src/: dataset.py
src/models/: ldm.py  vae.py
validation/: bin2cell_validation_baseline.py  summarize_validation_suite.py
